--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,7 @@
     android:gravity="center">
 
     <Button
+        android:id="@+id/button_random_joke"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_random_joke"
@@ -14,6 +15,7 @@
         android:textAllCaps="false"/>
 
     <Button
+        android:id="@+id/button_text_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_text_input"
@@ -22,6 +24,7 @@
         android:textAllCaps="false"/>
 
     <Button
+        android:id="@+id/button_never_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_never_ending"
