--- a/app/src/main/res/layout/fragment_text_input.xml
+++ b/app/src/main/res/layout/fragment_text_input.xml
@@ -5,12 +5,20 @@
     android:layout_height="match_parent"
     android:gravity="center">
 
-    <EditText
-        android:id="@+id/edit_text_name"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:hint="@string/edit_text_hint"/>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/layout_input_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/edit_text_name"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:hint="@string/edit_text_hint"/>
+
+    </android.support.design.widget.TextInputLayout>
+
 
     <Button
         android:id="@+id/button_submit"
