--- a/app/src/main/res/layout/fragment_text_input.xml
+++ b/app/src/main/res/layout/fragment_text_input.xml
@@ -3,18 +3,19 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:layout_marginTop="120dp"
+    android:gravity="center_horizontal">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/layout_input_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp">
 
         <EditText
             android:id="@+id/edit_text_name"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
             android:hint="@string/edit_text_hint"/>
 
     </android.support.design.widget.TextInputLayout>
